# ui-desk-baremetal

./: .gdb_history  Cargo.toml  build.rs  test  test.c
ui/: appwindow.slint
