[package]
name = "ui-desk"
version = "0.1.0"
authors = ["Sigvart Hovland <sigvart.hovland@nordicsemi.no>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.5"

[build-dependencies]
slint-build = "1.5"
